# fancy_state_machine

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: StateA.h  StateB.h  StateMachineProcesser.h
source/: StateA.cpp  StateB.cpp  StateMachineProcesser.cpp
